08-grafana/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  labels:
    app: grafana
    component: ingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
  - host: grafana.test
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana
            port:
              number: 3000
